[gd_scene load_steps=4 format=3 uid="uid://coo3w04cgewja"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_0pf2i"]
[ext_resource type="Texture2D" uid="uid://dq5gsh0hu6ch4" path="res://cards/images/agents/mega_armor.jpg" id="2_j40b2"]

[sub_resource type="Theme" id="Theme_xj3mu"]
Label/colors/font_color = Color(0.0962047, 0.0962048, 0.0962047, 1)
Label/font_sizes/font_size = 14

[node name="Control" type="Control"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 200.0
theme = SubResource("Theme_xj3mu")
script = ExtResource("1_0pf2i")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Image" type="TextureRect" parent="ColorRect/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_j40b2")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Name" type="Label" parent="ColorRect/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="LVL" type="Label" parent="ColorRect/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Stats" type="Label" parent="ColorRect/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
text = "STR5 VIT10 MOV2"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CardBack" type="ColorRect" parent="ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.882353)

[node name="CardBackLabel" type="RichTextLabel" parent="ColorRect/CardBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
